force-app/main/default/objects/EYI_CHIF__c/EYI_CHIF__c.object-meta.xml
<CustomObject>
    <label>CHIF</label>
    <nameField>
        <displayFormat>CHIF - {00000}</displayFormat>
        <label>CHIF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CHIFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>