force-app/main/default/objects/EYI_CHIF__c/fields/EYI_Typology__c.field-meta.xml
<CustomField>
    <fullName>EYI_Typology__c</fullName>
    <label>Typology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1BHK</fullName>
            </value>
            <value>
                <fullName>2BHK</fullName>
            </value>
            <value>
                <fullName>3BHK</fullName>
            </value>
            <value>
                <fullName>4BHK</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Row House</fullName>
            </value>
            <value>
                <fullName>Office Spaces</fullName>
            </value>
            <value>
                <fullName>Shops</fullName>
            </value>
            <value>
                <fullName>Retail Store</fullName>
            </value>
            <value>
                <fullName>2.5BHK</fullName>
            </value>
            <value>
                <fullName>1.5BHK</fullName>
            </value>
            <value>
                <fullName>5BHK</fullName>
            </value>
            <value>
                <fullName>RETAIL UNIT</fullName>
            </value>
            <value>
                <fullName>MANUFACTURING UNIT</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Simplex</fullName>
            </value>
            <value>
                <fullName>TYPE A</fullName>
            </value>
            <value>
                <fullName>EXISTING</fullName>
            </value>
            <value>
                <fullName>FUTURE</fullName>
            </value>
            <value>
                <fullName>TYPE B</fullName>
            </value>
            <value>
                <fullName>3.5BHK</fullName>
            </value>
            <value>
                <fullName>4.5BHK</fullName>
            </value>
            <value>
                <fullName>Condos</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>