force-app/main/default/objects/EYI_CHIF__c/fields/EYI_Visit_On_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>EYI_Visit_On_Behalf_Of__c</fullName>
    <label>Visit On Behalf Of</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>